--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,17 +1,17 @@
 ---
-
+pageable: true
 ---
 
 <% blog.articles[0...5].each do |article| %>
   <article>
     <h1>
       <a href="<%= article.url %>"><%= article.title %></a>
-      <time><%= article.date.strftime('%b %e %Y') %></time>
+      <time><%= article.date.strftime("%B #{article.date.day.ordinalize}, %Y") %></time>
     </h1>
 
     <%= article.summary %>
 
-    <a href='<%= article.url %>'>Read more</a>
+    <a href='<%= article.url %>'>...read more.</a>
   </article>
 <% end %>
 
