--- a/source/stylesheets/lib/_fonts.css.scss
+++ b/source/stylesheets/lib/_fonts.css.scss
@@ -1,4 +1,6 @@
-$font-primary-typeface: 'Open Sans', 'Museo Sans', 'HelveticaNeue Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Verdana, Sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Vollkorn|Dancing+Script');
+
+$font-primary-typeface: 'Times', 'Times New Roman', 'Open Sans', 'Museo Sans', 'HelveticaNeue Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Verdana, Sans-serif;
 $font-primary-weight: 300;
 
 $font-letter-spacing: 0.012em;
