--- a/source/stylesheets/lib/common.css.scss
+++ b/source/stylesheets/lib/common.css.scss
@@ -16,9 +16,9 @@ body, textarea, input, select, option {
 }
 
 body {
-  background: #f9f9f9 url('/images/header.png') center center no-repeat;
+  background: #f9f9f9;
   border-top: solid $body-top-border-color 12px;
-  color: #FFF;
+  color: #333;
   padding-top: 2.45em; // room for the nav, here
 }
 
@@ -40,3 +40,77 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
     transition: opacity 0.1s ease-in;
   }
 }
+
+header {
+  background: url('/images/header.png') 96.5% center no-repeat;
+  height: 8em;
+  margin: auto;
+  text-indent: -10000px;
+  width: 70em;
+
+  a {
+    display: block;
+    height: 100%;
+    position: relative;
+    z-index: 100;
+  }
+}
+
+nav {
+  border-top: solid #222 1px;
+  font-family: 'Vollkorn', 'Times', 'Times New Roman';
+  font-weight: 400;
+  margin: auto;
+  padding: 1em;
+  width: 60em;
+
+  a {
+    border-right: solid #676767 1px;
+    padding: 0 1.3em;
+    text-transform: lowercase;
+
+    &:first-of-type {
+      color: #b185a9;
+    }
+
+    &:nth-child(2) {
+      color: #a54648;
+    }
+
+    &:nth-child(3) {
+      color: #853d70;
+    }
+
+    &:nth-child(4) {
+      color: #4e755e;
+    }
+
+    &:last-of-type {
+      border-right: none;
+      color: #485283;
+    }
+  }
+}
+
+#content {
+  left: 50%;
+  margin-left: -30em;
+  position: relative;
+  width: 40em;
+}
+
+h1 {
+  color: #696969;
+  font: {
+    family: 'Dancing Script', cursive;
+    size: 2.5em;
+    weight: 300;
+  }
+  margin-top: 1em;
+  text-align: center;
+}
+
+article {
+  border-bottom: solid #222 1px;
+}
+
