--- a/source/stylesheets/lib/layout/aside.scss
+++ b/source/stylesheets/lib/layout/aside.scss
@@ -1,12 +1,15 @@
-@import '../variables';
+@import '../fonts', '../variables';
 
 aside {
   border-left: solid #222 1px;
   color: #828282;
-  font-family: 'Vollkorn', 'Times', 'Times New Roman';
+  font: {
+    family: $font-primary-typeface;
+    size: 0.9em;
+  }
   left: 50%;
   margin: 0 0 3em 13em;
-  padding: 9em 0 2em 2em;
+  padding: 10em 0 2em 2em;
   position: absolute;
   top: 3em;
   width: 17em;
