--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -49,11 +49,11 @@
         %strong 
           &#8221;You&#8217;re a really odd juxtaposition of modern 
           city-girl-artist, and old fashioned domestic goddess.&#8212;
-        This comment rang true with me somewhat then, but it absolutely 
+        This comment rang somewhat true with me then, but it absolutely 
         nails my life now.
     
       %p
-        Every time I&#8217;ve blogged in the past it&#8217;s been with
+        Every time I've blogged in the past it&#8217;s been with
         some pretense, some holding back, and some 
         &#8216;keeping up appearances.&#8217; But now, this is me: the good,
         the bad, and the unusual.
@@ -67,13 +67,13 @@
       %p
         I&#8217;m an artist, and super insecure about it. Working on that.
         I&#8217;m an unconventional Christian, which I&#8217;ll ramble about 
-        occasionally. I#8217;m weirdly fascinated by Meyers-Briggs 
+        occasionally. I&#8217;m weirdly fascinated by Meyers-Briggs 
         (I&#8217;m an INFJ, if you were wondering.) 
 
       %p
         I like real whole foods, and really good bourbon. I like regency era
         romance novels and giant textbooks about biomechanics. I&#8217;m an 
-        amateur barista and mixologist, and I#8217;m working towards my 
+        amateur barista and mixologist, and I&#8217;m working towards my 
         certification to be a Restorative Exercise coach. (For admittedly nerdy,
         selfish purposes.)
 
