--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -53,7 +53,7 @@
         nails my life now.
     
       %p
-        Every time I've blogged in the past it&#8217;s been with
+        Every time I&#8217;ve blogged in the past it&#8217;s been with
         some pretense, some holding back, and some 
         &#8216;keeping up appearances.&#8217; But now, this is me: the good,
         the bad, and the unusual.
