fixing the thing
fixing the thing

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -78,7 +78,7 @@
         selfish purposes.)
 
       %p 
-        So, brew a coffee&mdash;I&#8217;m probably joining you&#8217;and
+        So, brew a coffee, I&#8217;m probably joining you&#8217;and
         dive in if you dare. I&#8217;m an acquired taste. (Really, ask my mom)
         You&#8217;ve been warned.
 
