--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -45,12 +45,7 @@
 
     %aside
       %p
-        A friend of mine said to me several years ago
-        %strong 
-          &#8221;You&#8217;re a really odd juxtaposition of modern 
-          city-girl-artist, and old fashioned domestic goddess.&#8212;
-        This comment rang somewhat true with me then, but it absolutely 
-        nails my life now.
+        Welcome to the Wildstead! 
     
       %p
         Every time I&#8217;ve blogged in the past it&#8217;s been with
