change tab name
tab name

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -36,7 +36,7 @@
 
   %body{class: body_classes}
     %header
-      %a(href='/') an odd juxtaposition
+      %a(href='/') Wildstead
     %nav
       /%a(href='/about/') About
       /%a(href='/artwork/') Artwork
