--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -45,37 +45,10 @@
 
     %aside
       %p
-        Welcome to the Wildstead! 
+        Welcome to the Wildstead!  We're a young family of amateur urban homesteaders.  Join us as we share our adventures as we abandon our apartment-dwelling city life to pursue our rural homesteading dreams.  
     
       %p
-        Every time I&#8217;ve blogged in the past it&#8217;s been with
-        some pretense, some holding back, and some 
-        &#8216;keeping up appearances.&#8217; But now, this is me: the good,
-        the bad, and the unusual.
-
-      %p
-        So hi, I&#8217;m Lindsey. I&#8217;m wildly in love with my Mad Scientist
-        husband, and my Wild Tornado munchkin. I&#8217;m sarcastic, genuine,
-        and sometimes I slip a curseword. My life is an adventure 
-        of contradictions.
-
-      %p
-        I&#8217;m an artist, and super insecure about it. Working on that.
-        I&#8217;m an unconventional Christian, which I&#8217;ll ramble about 
-        occasionally. I&#8217;m weirdly fascinated by Meyers-Briggs 
-        (I&#8217;m an INFJ, if you were wondering.) 
-
-      %p
-        I like real whole foods, and really good bourbon. I like regency era
-        romance novels and giant textbooks about biomechanics. I&#8217;m an 
-        amateur barista and mixologist, and I&#8217;m working towards my 
-        certification to be a Restorative Exercise coach. (For admittedly nerdy,
-        selfish purposes.)
-
-      %p 
-        So, brew a coffee, I&#8217;m probably joining you&#8217;and
-        dive in if you dare. I&#8217;m an acquired taste. (Really, ask my mom)
-        You&#8217;ve been warned.
+        A few of the topics we’re passionate about include:  sustainability, small scale agriculture, hydroponics, herbalism, waldorf-inspired homeschooling, minimalism, fermenting, home brewing/distilling, natural movement, yoga, hiking, storytelling, art and illustration, automation and engineering.  
 
       = image_tag '/images/aside.jpg'
       
