--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -8,7 +8,7 @@
 %html{lang: I18n.locale, class: 'no-js'}
   /<![endif]
   %head
-    %title #{data.page.title || 'an odd juxtaposition'}
+    %title #{data.page.title || 'Wildstead'}
     %meta(http-equiv="content-type" content="text/html" charset="utf-8")
     %meta(http-equiv="x-ua-compatible" content="ie=edge,chrome=1")
     %meta{ name: :description, content: 'The Art & Blog of Lindsey Jones' }
