--- a/source/stylesheets/lib/layout/aside.scss
+++ b/source/stylesheets/lib/layout/aside.scss
@@ -1,15 +1,15 @@
 @import '../fonts', '../variables';
 
 aside {
-  border-left: solid #222 1px;
-  color: #828282;
+  border-left: solid #ebebeb 1px;
+  color: #000;
   font: {
     family: $font-primary-typeface;
     size: 0.9em;
   }
   left: 50%;
-  margin: 0 0 3em 13em;
-  padding: 10em 0 2em 2em;
+  margin: 12em 0 3em 13em;
+  padding: 0em 0 2em 2em;
   position: absolute;
   top: 3em;
   width: 17em;
