--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -45,10 +45,10 @@
 
     %aside
       %p
-        Welcome to the Wildstead!  We're a young family of amateur urban homesteaders.  Join us as we share our adventures as we abandon our apartment-dwelling city life to pursue our rural homesteading dreams.  
+        Welcome to the Wildstead! We are the Jones family, wildsteaders cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we share our adventures in abandoning our apartment-dwelling city life to pursue our wilderness adventure dreams.  
     
       %p
-        A few of the topics we’re passionate about include:  sustainability, small scale agriculture, hydroponics, herbalism, waldorf-inspired homeschooling, minimalism, fermenting, home brewing/distilling, natural movement, yoga, hiking, storytelling, art and illustration, automation and engineering.  
+        Among the 3 of us, our passions include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, storytelling, art and illustration, software engineering, robotics,   
 
       = image_tag '/images/aside.jpg'
       
