--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -38,14 +38,14 @@
     %header
       %a(href='/') Wildstead
     %nav
-      /%a(href='/about/') About
-      /%a(href='/artwork/') Artwork
-      /%a(href='/photography/') Photography
-      /%a(href='/store/') Store
+      %a(href='/about/') About
+      %a(href='/artwork/') Artwork
+      %a(href='/photography/') Photography
+      %a(href='/store/') Store
 
     %aside
       %p
-        Welcome to the Wildstead! We are the Jones family, wildsteaders cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we share our adventures in abandoning our apartment-dwelling city life to pursue our wilderness adventure dreams.  
+        Welcome to the Wildstead! We are the Jones family, a small family of wildsteaders cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we share our adventures in abandoning our apartment-dwelling city life to pursue our wilderness adventure dreams.  
     
       %p
         Among the 3 of us, our passions include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, storytelling, art and illustration, software engineering, robotics,   
