--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -45,10 +45,10 @@
 
     %aside
       %p
-        Welcome to the Wildstead! We are the Jones family, a small family of wildsteaders cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we share our adventures in abandoning our apartment-dwelling city life to pursue our wilderness adventure dreams.  
+        Welcome to the Wildstead! We are the Jones, a young family cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we abandon our apartment-dwelling city life and share our adventures pursuing our wilderness adventure dreams.  
     
       %p
-        Among the 3 of us, our passions include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, storytelling, art and illustration, software engineering, robotics,   
+        Between the 3 of us, our interests include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, fishing, bowhunting, storytelling, art and illustration, software engineering, robotics, knitting, apparel sewing, quilting, pretentious coffee, LEGO, and snowboarding.   
 
       = image_tag '/images/aside.jpg'
       
