--- a/source/stylesheets/lib/common.css.scss
+++ b/source/stylesheets/lib/common.css.scss
@@ -44,9 +44,9 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
 }
 
 header {
-  background: url('/images/header2.png') 50% center no-repeat;
-  background-size: 270px auto;
-  height: 7em;
+  background: url('/images/header4.png') 50% center no-repeat;
+  background-size: 400px auto;
+  height: 10em;
   margin: auto;
   text-indent: -10000px;
   width: 60em;
@@ -60,7 +60,7 @@ header {
 }
 
 nav {
-  border-top: solid #ebebeb 1px;
+  border-top: solid #676767 1px;
   font-family: 'Vollkorn', 'Times', 'Times New Roman';
   font-weight: 400;
   margin: auto;
