--- a/source/stylesheets/lib/layout/aside.scss
+++ b/source/stylesheets/lib/layout/aside.scss
@@ -1,7 +1,7 @@
 @import '../fonts', '../variables';
 
 aside {
-  border-left: solid #ebebeb 1px;
+  border-left: solid #676767 1px;
   color: #000;
   font: {
     family: $font-primary-typeface;
