--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -50,7 +50,7 @@
       %p
         Between the 3 of us, our interests include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, fishing, bowhunting, storytelling, art and illustration, software engineering, robotics, knitting, apparel sewing, quilting, pretentious coffee, LEGO, and snowboarding.   
 
-      = image_tag '/images/aside.jpg'
+      = image_tag '/images/family.jpg'
       
       %h2 Categories
 
