--- a/source/stylesheets/lib/common.css.scss
+++ b/source/stylesheets/lib/common.css.scss
@@ -73,24 +73,24 @@ nav {
     text-transform: lowercase;
 
     &:first-of-type {
-      color: #b185a9;
+      color: #215a24;
     }
 
     &:nth-child(2) {
-      color: #a54648;
+      color: #29652c;
     }
 
     &:nth-child(3) {
-      color: #853d70;
+      color: #4b864d;
     }
 
     &:nth-child(4) {
-      color: #4e755e;
+      color: #4b866f;
     }
 
     &:last-of-type {
       border-right: none;
-      color: #485283;
+      color: #4b866f;
     }
   }
 }
