woo did a thing need more alcohol
boomshakalaka

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -45,8 +45,10 @@
 
     %aside
       %p
+
+        = image_tag '/images/familyportrait.jpg'
+        
         Welcome to the Wildstead! We are the Jones, a young family cultivating our own unique fusion of homesteading and rewilding with a technological twist. Join us as we abandon our apartment-dwelling city life and share our adventures pursuing our wilderness adventure dreams.  
-    
       %p
         Between the 3 of us, our interests include herbal medicine, foraging, small scale agriculture, hydroponics, waldorf-inspired homeschooling, minimalism, fermentation, home brewing, natural movement, yoga, hiking, fishing, bowhunting, storytelling, art and illustration, software engineering, robotics, knitting, apparel sewing, quilting, pretentious coffee, LEGO, and snowboarding.   
 
