--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -39,9 +39,13 @@
       %a(href='/') Wildstead
     %nav
       %a(href='/about/') About
-      %a(href='/artwork/') Artwork
-      %a(href='/photography/') Photography
-      %a(href='/store/') Store
+      /%a(href='/artwork/') Artwork
+      /%a(href='/photography/') Photography
+      %a(href='https://www.etsy.com/shop/Wildstead') Store
+      %a(href='http://www.facebook.com/wildstead')Facebook
+      %a(href='http://www.instagram.com/lifeonthewildstead')Instagram
+
+
 
     %aside
       %p
